--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,38 @@
 /*  your css code here. If applicable */
+
+/*  your css code here. If applicable */
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f4f4f4;
+}
+
+.container {
+    display: flex;
+    gap: 20px;
+    padding: 50px;
+    border: 5px solid black;
+    background-color: lightgray;
+	border-radius:50px
+}
+
+.red, .green, .yellow {
+    width: 100px;
+    height: 100px;
+	border-radius:100px;
+}
+
+.red {
+    background-color: red;
+}
+
+.green {
+    background-color: green;
+}
+
+.yellow {
+    background-color: yellow;
+}
